<package>
  <name>create_description</name>
  <version>2.0.1</version>
  <description>Model description for the iRobot Create</description>
  <maintainer email="turtlebot@osrfoundation.com">OSRF</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/create_description</url>
  <author email="turtlebot@willowgarage.com">Willow</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>